kubernetes/01-storage/config/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: codehunters
  labels:
    name: codehunters
