kubernetes/01-storage/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: ???
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      containers:
        - name: events-service
          imagePullPolicy: Always
          image: ???
          ports:
            - containerPort: ???
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "350m"
          livenessProbe:
            httpGet:
              port: 8080
              path: ???
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: ???
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
