kubernetes/01-storage/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-events-service
  namespace: codehunters
  labels:
    app: service-events-service
spec:
  selector:
    app: events-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: ???
  type: ???
